
syntax = "proto3";

option java_multiple_files = true;
option java_package = "sample.cluster.client.grpc";
option java_outer_classname = "ClusterClientProto";

message Req {
  oneof req {
    SendReq send = 1;
    SendToAllReq sendToAll = 2;
    PublishReq publish = 3;
  }
}

message SendReq {
  string path = 1;
  bool localAffinity = 2;
  Payload payload = 3;
}

message SendToAllReq {
  string path = 1;
  Payload payload = 2;
}

message PublishReq {
  string topic = 1;
  Payload payload = 2;
}

message Rsp {
  Payload payload = 1;
}

message Payload {
  bytes enclosedMessage = 1;
  int32 serializerId = 2;
  string messageManifest = 3;
}

service ClusterClientReceptionistService {
  rpc NewSession (stream Req) returns (stream Rsp) {}

  rpc AskSend (SendReq) returns (Rsp) {}
}
